--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-feedparser==6.0.10
-openai==1.3.7
-streamlit==1.28.1
-autogen==0.2.0
-requests==2.31.0
-beautifulsoup4==4.12.2
-python-dateutil==2.8.2
-newsapi-python==0.2.6
-lxml==4.9.3
+feedparser>=6.0.0
+openai>=1.0.0
+streamlit>=1.28.0
+requests>=2.25.0
+beautifulsoup4>=4.9.0
+python-dateutil>=2.8.0
+newsapi-python>=0.2.0
+lxml>=4.6.0
